<resources>
    <string name="app_name">BlueRide Transportation</string>
    <string name="my_deals">My Deals</string>
    <string name="market">Market</string>
    <string name="profile">Profile</string>
    <string name="need_ride_for_my_student">Need Ride For My Student</string>
    <string name="market_request">Market Request</string>
    <string name="msg_empty_deal">You Don’t Have Requests Yet Start Make Offers</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="title_dialog_offer">Read the details carefully before adding an offer</string>
    <string name="no_of_trips">No. of trips</string>
    <string name="distance_trip">Distance/ Trip</string>
    <string name="no_of_students">No. of students</string>
    <string name="type_of_trip">Type of trip</string>
    <string name="add_your_offer">Add Your Offer*</string>
    <string name="add_your_comment">Add Your Comment</string>
    <string name="write_your_comment">Write your comment</string>
    <string name="submit_offer">Submit Offer</string>
    <string name="msg_successfully">Your offer is successfully submitted. we will notify you when the requester accept your offer</string>
    <string name="blue_ride">Blue ride • now</string>
    <string name="notification">Notification</string>
    <string name="notifications_title">Notifications</string>
    <string name="log_out">Log Out</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="edit_profile">Edit Profile</string>
    <string name="app_setting_title">App Settings</string>
    <string name="have_offers">Have offers</string>
    <string name="need_ride_to_my_son_at_monday_late_ride">Need ride to my son at monday late ride</string>
    <string name="edit">Edit</string>
    <string name="call">Call</string>
    <string name="login_header">Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_hint">523***</string>
    <string name="password_title">Password</string>
    <string name="forget_password_title">Forgot password?</string>
    <string name="by_clicking_sign_in_you_are_agreeing_to_our">By clicking sign in you are agreeing to our</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="wrong_credentials">Incorrect phone number or password</string>
    <string name="welcome_to_driver_app">Welcome To Driver App</string>
    <string name="start_creating_your_account">Start creating your account</string>
    <string name="user_name">User Name</string>
    <string name="must_be_at_least_8_characters_and_contains_letters_and_numbers">Must be at least 8 characters, and contains letters and numbers</string>
    <string name="by_clicking_sign_up_you_are_agreeing_to_our">By clicking Sign up you are agreeing to our</string>
    <string name="company">Company</string>
    <string name="pickup_your_children_from_here">Pickup your children from here.</string>
    <string name="driver">Driver</string>
    <string name="make_an_offers_and_start_make_money">make an offers and start make money</string>
    <string name="start_log_in">Start Log in</string>
    <string name="full_name">Full Name*</string>
    <string name="company_name">Company Name*</string>
    <string name="email">Email</string>
    <string name="vehicle_details">vehicle details:</string>
    <string name="add_vehicle">+Add vehicle</string>
    <string name="save">Save</string>
    <string name="card_brand">Card Brand</string>
    <string name="card_model">Car Model</string>
    <string name="manufacturing_year">Manufacturing year</string>
    <string name="images">Images</string>
    <string name="area">Area</string>
    <string name="you_already_have_account">You Already Have Account?</string>
    <string name="signin">Sign in</string>
    <string name="choose_account_type">Choose Your account type</string>
    <string name="continues">Continue</string>
    <string name="view_requests">View Requests</string>
    <string name="email_website">Email/Website</string>
    <string name="vehicle_type">Vehicle Type*</string>
    <string name="number_of_vehicle">Number Of Vehicle*</string>
    <string name="complete_your_company_profile">Complete Your Company Profile</string>
    <string name="complete_your_driver_profile">Complete Your Individual Profile</string>
    <string name="offer_submitted">Offer Submitted</string>
    <string name="msg_empty_market">No requests at the moment</string>
    <string name="server_error">Error occurred,check internet connection and try again later</string>
    <string name="empty_field">This field can\'t be empty</string>
    <string name="go_trip">Go Trip</string>
    <string name="back_trip">Back Trip</string>
    <string name="round_trip">Round Trip</string>
    <string name="bus">Bus</string>
    <string name="personal_driver">Personal driver</string>
    <string name="carpooling">Carpooling</string>
    <string name="preferred_working_area">Preferred Working Area</string>
    <string name="select_vehicle_types">Select Vehicle Types</string>
    <string name="buses">Buses</string>
    <string name="personal_cars">Personal Cars</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_granted">Permission granted</string>
    <string name="no_gps">Your gps is disabled, please enable it to start the request</string>
    <string name="no_gps_profile">Your gps is disabled, please enable it to update your location</string>
    <string name="open_location_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="gender">Gender</string>
    <string name="select_gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enter_valid_email">Please enter valid email</string>
    <string name="number_of_vehicle_profile">Number of vehicle</string>
    <string name="someThing_went_wrong">Something went wrong</string>
    <string name="please_select_preferred_working_area">Please Select Preferred Working Area</string>
    <string name="must_be_at_least_one_vehicle">Must be at least one vehicle</string>
    <string name="permission_needed">Permission needed</string>
    <string name="picture_permission_explanation">In order to continue and change picture, We need your permission to access your storage</string>
    <string name="password_must_contain">Password Must Contains at least 8 Chars with : Uppercase Letter, Lowercase Letter and Digit</string>
    <string name="personal_car">Personal Car</string>
    <string name="days">Days</string>
    <string name="starting_from">Starting from %s</string>
    <string name="trip">Trip</string>
    <string name="trips">Trips</string>
    <string name="students">Students</string>
    <string name="change_language_title">Change language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="phone_already">The phone number has already been taken.</string>
    <string name="semester">Semester</string>
    <string name="weak">Week</string>
    <string name="month">Month</string>
    <string name="custom_days">Custom Days</string>
</resources>