<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/bg_dialog_submit_offer"
    android:orientation="vertical">


    <TextView
        style="@style/font_lato_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_4x"
        android:layout_marginTop="@dimen/space_6x"
        android:text="@string/select_gender"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt_male"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="@dimen/space_6x"
        android:textSize="18sp"
        tools:targetApi="m"
        android:text="@string/male" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/view_line"
        android:background="#EBEBEB" />

    <TextView
        android:id="@+id/txt_female"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="@dimen/space_6x"
        android:textSize="18sp"
        tools:targetApi="m"
        android:text="@string/female" />


</LinearLayout>